--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -5,11 +5,22 @@
   padding: 0;
   font-family: 'Montserrat', sans-serif;
   color: black;
+  box-sizing: border-box;
+}
+
+/* Helpers */
+
+.flex-row {
+  display: flex;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
 }
 
 body {
   background-image: url(../images/BackgroundLight.jpg);
-  /* background: linear-gradient(0deg, #d5eaf5, #f5ddda); */
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -21,7 +32,8 @@ body {
   background-color: rgba(223, 222, 221, 0.52);
   backdrop-filter: blur(2px);
   -webkit-backdrop-filter: blur(2px);
-  box-shadow: 0 4px 30px rgba(119, 118, 118, 0.315);
+  /* box-shadow: 0 4px 30px rgba(119, 118, 118, 0.315); */
+  box-shadow: 0 4px 30px rgba(141, 141, 141, 0.35);
   color: white;
   margin: 1rem 2rem;
   padding: 3rem;
@@ -44,42 +56,30 @@ h2 {
   text-decoration: none;
   background: linear-gradient(140deg, #1e2a78, #ff2e4c);
   color: white;
-  position: relative;
   border-radius: 6px;
   padding: 0.5rem 1rem;
   font-size: 1rem !important;
+  margin: 1rem;
 }
 
 .button:hover {
   box-shadow: 0 4px 30px rgba(56, 42, 42, 0.4);
 }
 
-nav {
-  height: 48px;
-  padding: 0.5em 0em;
-
-  position: absolute;
-  top: 0;
-  width: 100%;
-  z-index: 5;
-
-  background-color: rgba(255, 255, 255, 0.678);
-  backdrop-filter: blur(12px);
-  -webkit-backdrop-filter: blur(12px);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.089);
-}
-
 .nav {
-  height: 48px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   padding: 0.5em 0em;
   position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 5;
   background-color: rgba(255, 255, 255, 0.678);
   backdrop-filter: blur(12px);
   -webkit-backdrop-filter: blur(12px);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.089);
+  z-index: 5;
+  width: 100%;
+  top: 0;
 }
 
 .nav__img {
@@ -89,15 +89,10 @@ nav {
 }
 
 .nav__list {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
   list-style-type: none;
-  position: absolute;
-  top: 1.5rem;
-  right: 0px;
-}
-
-.nav__item {
-  display: inline-block;
-  position: relative;
 }
 
 .nav__item-link {
@@ -107,20 +102,17 @@ nav {
 }
 
 .footer {
-  padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 3rem;
+  padding: 0 2rem;
+  align-items: center;
   font-weight: bold;
   background-color: rgba(255, 255, 255, 0.678);
   backdrop-filter: blur(12px);
   -webkit-backdrop-filter: blur(12px);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.089);
-}
-
-.footer__text {
-  display: inline-block;
-}
-
-.footer__text--right {
-  float: right;
 }
 
 .gradient {
@@ -135,92 +127,99 @@ nav {
 .galeria {
   text-align: center;
   margin-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.contacto__title,
+.galeria__title {
+  margin-bottom: 3rem;
 }
 
 /* Estilos index  */
 
+/* Hero  */
+
 .inicio {
-  text-align: center;
-  padding-top: 3rem;
   margin-top: 6.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .inicio__title {
   font-family: 'Public Sans', Arial, sans-serif;
   color: black;
-  position: relative;
   margin: 3rem 0;
   font-size: 2rem;
 }
 
-.inicio .button {
-  margin-top: 5rem;
+.inicio__img {
+  width: 60%;
 }
 
-.inicio__img {
-  width: 700px;
-}
+/* servicios y nosotros */
 
 .info {
-  display: inline-block;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
 }
 
-.info .nosotros {
-  margin-right: 1rem;
-  float: left;
-  width: 38%;
-  height: 306px;
-  text-align: center;
-}
-
-.nosotros__text {
-  text-align: justify;
-  margin-bottom: 2rem;
-}
-
+.info .nosotros,
 .info .servicios {
-  margin-left: 1rem;
-  float: right;
-  width: 38%;
-  height: 306px;
-  text-align: center;
+  width: 50%;
+  height: 450px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.servicios__item-link {
-  text-decoration: none;
-  font-size: 1.2rem;
+.info .nosotros__subtitle,
+.info .servicios__subtitle {
+  margin: 0px;
+}
+
+.info .nosotros__text {
+  text-align: justify;
+}
+
+.info .servicios__items {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .servicios__item-text {
-  font-weight: bold;
+  font-weight: semibold;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
-.servicios__text {
-  color: black;
-  text-align: center;
-  margin: 2rem 0;
-}
+/* contacto  */
 
 .contacto__container {
-  display: inline-block;
+  display: flex;
+  justify-content: space-around;
+  text-align: left;
+  height: 70vh;
 }
 
 .contacto__form {
-  float: left;
-  margin: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .contacto__article {
-  float: right;
-  margin: 1.2rem;
-}
-
-.contacto {
-  text-align: left;
-}
-
-.contacto__subtitle {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .contacto__map-container {
@@ -254,7 +253,6 @@ nav {
 .contacto__button {
   width: 30rem;
   padding: 12px 20px;
-  margin: 8px 0;
   box-sizing: border-box;
   border: 2px solid #1e2a78;
   background: transparent;
@@ -281,7 +279,6 @@ nav {
   box-sizing: border-box;
   border: 2px solid #1e2a78;
   border-radius: 6px;
-  color: white;
 }
 
 .contacto__textarea::placeholder {
@@ -335,10 +332,17 @@ details[open] > summary {
 
 /* Galeria */
 
+.galeria__container {
+  flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: center;
+  width: 90%vw;
+}
+
 .galeria__img {
   margin: 1rem;
-  width: 21%;
-  height: 223px;
+  width: 200px;
+  max-height: 200px;
   box-sizing: border-box;
   border-radius: 6px;
 }
