--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -67,8 +67,6 @@ h2 {
 }
 
 .nav {
-  display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding: 0.5em 0em;
@@ -89,8 +87,6 @@ h2 {
 }
 
 .nav__list {
-  display: flex;
-  flex-direction: row;
   justify-content: flex-end;
   list-style-type: none;
 }
@@ -102,8 +98,6 @@ h2 {
 }
 
 .footer {
-  display: flex;
-  flex-direction: row;
   justify-content: space-between;
   height: 3rem;
   padding: 0 2rem;
@@ -127,8 +121,8 @@ h2 {
 .galeria {
   text-align: center;
   margin-top: 5rem;
-  display: flex;
-  flex-direction: column;
+  /*display: flex;
+  flex-direction: column;*/
   justify-content: space-between;
 }
 
@@ -143,8 +137,6 @@ h2 {
 
 .inicio {
   margin-top: 6.5rem;
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -163,7 +155,6 @@ h2 {
 /* servicios y nosotros */
 
 .info {
-  display: flex;
   justify-content: space-between;
   align-items: stretch;
 }
@@ -172,8 +163,6 @@ h2 {
 .info .servicios {
   width: 50%;
   height: 450px;
-  display: flex;
-  flex-direction: column;
   justify-content: space-between;
   align-items: center;
 }
@@ -188,8 +177,6 @@ h2 {
 }
 
 .info .servicios__items {
-  display: flex;
-  flex-direction: column;
   justify-content: space-between;
 }
 
@@ -202,22 +189,17 @@ h2 {
 /* contacto  */
 
 .contacto__container {
-  display: flex;
   justify-content: space-around;
   text-align: left;
   height: 70vh;
 }
 
 .contacto__form {
-  display: flex;
-  flex-direction: column;
   justify-content: space-between;
   align-items: center;
 }
 
 .contacto__article {
-  display: flex;
-  flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
 }
