--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -1,10 +1,10 @@
-/* Estilos globales */
+/* Reset */
 
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
-  color: black;
   box-sizing: border-box;
 }
 
@@ -17,6 +17,15 @@
 .flex-column {
   display: flex;
   flex-direction: column;
+}
+
+/* Estilos globales */
+
+html {
+  font-family: 'Montserrat', sans-serif;
+  color: black;
+  font-size: 62.5%; /*10px*/
+
 }
 
 body {
@@ -32,23 +41,30 @@ body {
   background-color: rgba(223, 222, 221, 0.52);
   backdrop-filter: blur(2px);
   -webkit-backdrop-filter: blur(2px);
-  /* box-shadow: 0 4px 30px rgba(119, 118, 118, 0.315); */
   box-shadow: 0 4px 30px rgba(141, 141, 141, 0.35);
-  color: white;
-  margin: 1rem 2rem;
-  padding: 3rem;
+  color: black;
+  margin: 1.6rem 3.2rem;
+  padding: 4.8rem;
 }
 
 h1 {
   text-align: center;
-  font-size: 3rem;
+  font-size: 4.8em;
   font-weight: 300;
-  margin-bottom: 1rem;
+  margin-bottom: 1.6rem;
 }
 
 h2 {
-  font-size: 2rem;
-  margin-bottom: 2rem;
+  font-size: 3.2em;
+  margin-bottom: 3.2rem;
+}
+
+h3 {
+  font-size: 2.0em;
+}
+
+p {
+  font-size: 1.6em;
 }
 
 .button {
@@ -58,8 +74,8 @@ h2 {
   color: white;
   border-radius: 6px;
   padding: 0.5rem 1rem;
-  font-size: 1rem !important;
-  margin: 1rem;
+  font-size: 1.6em;
+  margin: 1.6rem;
 }
 
 .button:hover {
@@ -69,7 +85,7 @@ h2 {
 .nav {
   justify-content: space-between;
   align-items: center;
-  padding: 0.5em 0em;
+  padding: 0.5rem 0;
   position: fixed;
   background-color: rgba(255, 255, 255, 0.678);
   backdrop-filter: blur(12px);
@@ -83,7 +99,7 @@ h2 {
 .nav__img {
   height: 48px;
   width: 200px;
-  margin-left: 1rem;
+  margin-left: 1.6rem;
 }
 
 .nav__list {
@@ -91,16 +107,20 @@ h2 {
   list-style-type: none;
 }
 
+.nav__item {
+  font-size: 1.6em;
+}
+
 .nav__item-link {
-  margin: 2rem;
+  margin: 3.2rem;
   text-decoration: none;
   font-weight: bold;
 }
 
 .footer {
   justify-content: space-between;
-  height: 3rem;
-  padding: 0 2rem;
+  height: 4.8rem;
+  padding: 0 3.2rem;
   align-items: center;
   font-weight: bold;
   background-color: rgba(255, 255, 255, 0.678);
@@ -120,15 +140,13 @@ h2 {
 .servicios,
 .galeria {
   text-align: center;
-  margin-top: 5rem;
-  /*display: flex;
-  flex-direction: column;*/
+  margin-top: 8.0rem;
   justify-content: space-between;
 }
 
 .contacto__title,
 .galeria__title {
-  margin-bottom: 3rem;
+  margin-bottom: 4.8rem;
 }
 
 /* Estilos index  */
@@ -136,7 +154,7 @@ h2 {
 /* Hero  */
 
 .inicio {
-  margin-top: 6.5rem;
+  margin-top: 10.4rem;
   justify-content: center;
   align-items: center;
 }
@@ -144,8 +162,8 @@ h2 {
 .inicio__title {
   font-family: 'Public Sans', Arial, sans-serif;
   color: black;
-  margin: 3rem 0;
-  font-size: 2rem;
+  margin: 4.8rem 0;
+  font-size: 3.2em;
 }
 
 .inicio__img {
@@ -169,7 +187,7 @@ h2 {
 
 .info .nosotros__subtitle,
 .info .servicios__subtitle {
-  margin: 0px;
+  margin: 0;
 }
 
 .info .nosotros__text {
@@ -182,7 +200,7 @@ h2 {
 
 .servicios__item-text {
   font-weight: semibold;
-  font-size: 1.5rem;
+  font-size: 2.4em;
   text-align: center;
 }
 
@@ -233,8 +251,8 @@ h2 {
 .contacto__input,
 .contacto__textarea,
 .contacto__button {
-  width: 30rem;
-  padding: 12px 20px;
+  width: 48rem;
+  padding: 1.2rem 2rem;
   box-sizing: border-box;
   border: 2px solid #1e2a78;
   background: transparent;
@@ -254,13 +272,7 @@ h2 {
 }
 
 .contacto__textarea {
-  height: 18rem;
-  width: 30rem;
-  background: transparent;
-  padding: 12px 20px;
-  box-sizing: border-box;
-  border: 2px solid #1e2a78;
-  border-radius: 6px;
+  height: 48rem;
 }
 
 .contacto__textarea::placeholder {
@@ -281,8 +293,8 @@ h2 {
 /* Servicios */
 
 .servicios__item {
-  margin: 0 2rem;
-  padding: 2rem;
+  margin: 0 3.2rem;
+  padding: 3.2rem;
   text-align: left;
 }
 
@@ -291,9 +303,9 @@ h2 {
 }
 
 .servicios__summary {
-  font-size: 2rem;
+  font-size: 3.2em;
   font-weight: bold;
-  margin-bottom: 2rem;
+  margin-bottom: 3.2rem;
 }
 
 .servicios__summary:hover {
@@ -322,7 +334,7 @@ details[open] > summary {
 }
 
 .galeria__img {
-  margin: 1rem;
+  margin: 1.6rem;
   width: 200px;
   max-height: 200px;
   box-sizing: border-box;
@@ -332,10 +344,14 @@ details[open] > summary {
 /* nosotros */
 
 .nosotros__item {
-  margin: 0 2rem;
-  padding: 2rem;
+  margin: 0 3.2rem;
+  padding: 3.2rem;
 }
 
 .nosotros__text {
   text-align: center;
 }
+
+
+/*Media Queries*/
+
