--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -139,12 +139,15 @@ p {
   -webkit-text-fill-color: transparent;
 }
 
+body > .grid-container {
+  min-height: 100vh;
+}
+
 .nosotros,
 .contacto,
 .servicios,
 .galeria {
   text-align: center;
-  /* margin-top: 8rem; */
   justify-content: space-between;
 }
 
@@ -321,6 +324,9 @@ p {
     'footer';
   grid-template-columns: 1fr;
   grid-template-rows: auto 1fr 4.8rem;
+}
+
+body > .servicios {
   min-height: 100vh;
 }
 
@@ -352,7 +358,7 @@ p {
     'contenido'
     'footer';
   grid-template-columns: 1fr;
-  grid-template-rows: auto auto 4.8rem;
+  grid-template-rows: auto 1fr 4.8rem;
 }
 
 .galeria__contenido__container {
@@ -378,7 +384,7 @@ p {
     'contenido'
     'footer';
   grid-template-columns: 1fr;
-  grid-template-rows: auto auto 4.8rem;
+  grid-template-rows: auto 1fr 4.8rem;
 }
 
 .nosotros__contenido__item {
@@ -398,18 +404,40 @@ p {
     'contacto'
     'footer';
   grid-template-columns: 1fr;
-  grid-template-rows: auto auto 4.8rem;
+  grid-template-rows: auto 1fr 4.8rem;
 }
 
 /* Media Queries */
 
 @media screen and (max-width: 1018px) {
   /* General */
-  .nosotros,
-  .contacto,
-  .servicios,
-  .galeria {
+  body > .nosotros,
+  body > .contactanos,
+  body > .servicios,
+  body > .galeria,
+  .index .inicio {
     margin-top: 8rem;
+  }
+
+  h1 {
+    text-align: center;
+    font-size: 4em;
+    font-weight: 300;
+    margin-bottom: 1.2rem;
+  }
+
+  h2 {
+    font-size: 2em;
+    margin-bottom: 2rem;
+  }
+
+  h3,
+  .servicios__contenido__summary {
+    font-size: 1.8em;
+  }
+
+  p {
+    font-size: 1.5em;
   }
 
   /* Index */
@@ -441,7 +469,6 @@ p {
 
   /* Servicios */
   .servicios__contenido__summary {
-    font-size: 1.6em;
     margin: 2rem 0;
   }
 
@@ -486,9 +513,9 @@ p {
 
   /* Galeria */
   .galeria__contenido__img {
-    margin: 1.4rem;
-    width: 150px;
-    max-height: 150px;
+    margin: 1rem;
+    width: 180px;
+    max-height: 180px;
   }
 }
 
@@ -526,12 +553,22 @@ p {
     margin-left: 0;
   }
 
-  .nav__list {
+  /* .nav__list {
     display: none;
-  }
+  } */
 
   .nav__list {
     gap: 8px;
+  }
+
+  .nav__item {
+    font-size: 1.2em;
+  }
+
+  /* Servicios */
+
+  .index .servicios__item-text {
+    font-size: 1.5em;
   }
 
   /* Contacto */
@@ -566,5 +603,12 @@ p {
   .contacto__textarea,
   .contacto__button {
     width: 100%;
+  }
+
+  /* Galeria */
+  .galeria__contenido__img {
+    margin: 1rem;
+    width: 110px;
+    max-height: 110px;
   }
 }
